<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F6FA"
    tools:context="RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:src="@drawable/aas"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:text="Начать"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#222222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="создать учетную запись"
            android:textSize="14sp"
            android:textColor="#777777"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Имя -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            app:endIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:hint="имя"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            app:endIconDrawable="@drawable/mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:hint="адрес эл.почты"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Телефон -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            app:endIconDrawable="@drawable/profile_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:hint="номер телефона"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Пароль -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:hint="@string/w"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkTerms"
            android:text="@string/e"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/r"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/fiolet"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvLogin"
            android:text="@string/t"
            android:textColor="#6C63FF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>